--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <tr>
                     <td>Média final</td>
                     <td id="media-final-valor">7</td>
-                    <td id="media-final-resultado"><span class="resultado">Aprovado</span></td>
+                    <td id="g"><span class="resultado">Aprovado</span></td>
                 </tr>
             </tfoot>
         </table>
