--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
             <tfoot>
                 <tr>
                     <td>Média final</td>
-                    <td id="media-final-valor">7</td>
-                    <td id="g"><span class="resultado">Aprovado</span></td>
+                    <td id="media-final-valor">---</td>
+                    <td id="g"><span class="resultado">---</span></td>
                 </tr>
             </tfoot>
         </table>
     </div>
     <script src="./main.js"></script>
+    
 </body>
 </html>
