Código media notas (Finalizado sem erros)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Calculadora de médias</h1>
         </header>
         <form id="form-atividade">
-            <input type="type=" id="nome-atividade" required placeholder="Nome da atividade" />
+            <input type="text" id="nome-atividade" required placeholder="Nome da atividade" />
             <input type="number" id="nota-atividade" placeholder="Nota da atividade" min="0" max="10" />
             <button type="submit">Adicionar +</button>
         </form>
@@ -34,7 +34,7 @@
                 <tr>
                     <td>Média final</td>
                     <td id="media-final-valor">---</td>
-                    <td id="g"><span class="resultado">---</span></td>
+                    <td id="media-final-resultado"><span class="resultado">---</span></td>
                 </tr>
             </tfoot>
         </table>
